--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Resume</title>
+    <title>Mitali Bansal</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -45,11 +45,11 @@
 <body>
     <div class="container">
         <header>
-            <h1>Your Name</h1>
-            <p>City, NJ 07728<br>
+            <h1><span style="color: rgb(0, 94, 255);">Mitali Bansal</span></h1>
+            <p>Freehold, NJ 07728<br>
             Mobile: [Your Mobile Number]<br>
             Email: [Your Email]<br>
-            LinkedIn: [Your LinkedIn Profile]</p>
+            LinkedIn: https://www.linkedin.com/in/mitalibansal</p>
         </header>
         
         <div class="section">
